# triwild-compute-wn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
bash_scripts_hpc/: fileprep_tagging.sh  json_4592426.out  json_4592482.out  json_4592502.out  json_creation.sh  log_4570986.out  log_4576257.out  log_4582861.out  log_4592784.out  run_offsets.sh  tagging_4429636.out  tagging_4501628.out  tagging_4533765.out  tagging_4583124.out
bash_scripts_hpc/wmtk_triwild_array/: queue_wmtk_triwild_array.py  wmtk_triwild_submit_array.slurm
include/: mesh_help.hpp  wn.hpp
python_scripts/: create_job_jsons.py  create_wmtk_triwild_jsons.py  merge_triwild_dirs.py  parse_log_partial_run.py  run_offsets.py  wmtk_triwild_check_progress.py  wmtk_triwild_delete_bad_outputs.py  wmtk_triwild_rename_logs.py
src/: compute_wn.cpp  main.cpp
